--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "pixi.js": "^8.16.0",
     "vue": "^3.5.28",
     "vue-router": "^4.6.4"
+  },
+  "overrides": {
+    "svgo": {
+      "commander": "^13.1.0"
+    }
   }
 }
